# Tracking-camera

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  requirements.txt
scripts/: calibrate_servo.py  test_camera.py
src/: __init__.py  camera.py  face_detector.py  logger.py  main.py  servo_controller.py  tracker.py
tests/: test_config.py  test_servo_controller.py  test_tracker.py
